--- a/templates/common/step_progressbar.html
+++ b/templates/common/step_progressbar.html
@@ -1,36 +1,32 @@
-<div class="fr-container">
-    <div class="fr-grid-row fr-grid-row--center">
-        <div class="container-progressbar fr-col-12 fr-my-5w">
-            <ul id="step_progressbar" class="progressbar" width="100%">
-                {% if convention.isnt_validated %}
-                    <li class="{% if convention_form_step > 1  %}active{% endif %} {% if convention_form_step == 1  %}current_step{% endif %}" role="bailleur"><div>Bailleur</div></li>
-                    <li class="{% if convention_form_step > 2  %}active{% endif %} {% if convention_form_step == 2  %}current_step{% endif %} {% if convention_form_step == 1 %}after_step{% endif %}" role="programme"><div>Opération</div></li>
-                    <li class="{% if convention_form_step > 3  %}active{% endif %} {% if convention_form_step == 3  %}current_step{% endif %} {% if convention_form_step == 2 %}after_step{% endif %}" role="cadastre"><div>Cadastre</div></li>
-                    <li class="{% if convention_form_step > 4  %}active{% endif %} {% if convention_form_step == 4  %}current_step{% endif %} {% if convention_form_step == 3 %}after_step{% endif %}" role="edd"><div>EDD</div></li>
-                    <li class="{% if convention_form_step > 5  %}active{% endif %} {% if convention_form_step == 5  %}current_step{% endif %} {% if convention_form_step == 4 %}after_step{% endif %}" role="financement"><div>Financement</div></li>
-                    <li class="{% if convention_form_step > 6  %}active{% endif %} {% if convention_form_step == 6  %}current_step{% endif %} {% if convention_form_step == 5 %}after_step{% endif %}" role="logements"><div>Logements</div></li>
-                    <li class="{% if convention_form_step > 7  %}active{% endif %} {% if convention_form_step == 7  %}current_step{% endif %} {% if convention_form_step == 6 %}after_step{% endif %}" role="annexes"><div>Annexes</div></li>
-                    <li class="{% if convention_form_step > 8  %}active{% endif %} {% if convention_form_step == 8  %}current_step{% endif %} {% if convention_form_step == 7 %}after_step{% endif %}" role="stationnements"><div>Stationnements</div></li>
-                    <li class="{% if convention_form_step > 9  %}active{% endif %} {% if convention_form_step == 9  %}current_step{% endif %} {% if convention_form_step == 8 %}after_step{% endif %}" role="comments"><div>Commentaires</div></li>
-                    <li class="{% if convention_form_step > 10 %}active{% endif %} {% if convention_form_step == 10 %}current_step{% endif %} {% if convention_form_step == 9 %}after_step{% endif %}" role="recapitulatif"><div>Récapitulatif</div></li>
-                {%  else %}
-                    <li class="{% if convention_form_step > 10 %}active{% endif %} {% if convention_form_step == 10 %}current_step{% endif %} {% if convention_form_step == 9 %}after_step{% endif %}" role="recapitulatif"><div>Récapitulatif</div></li>
-                    <li class="{% if convention_form_step > 11 %}active{% endif %} {% if convention_form_step == 11 %}current_step{% endif %} {% if convention_form_step == 10 %}after_step{% endif %}" role="preview"><div>Prévisualisation</div></li>
-                    <li class="{% if convention_form_step > 12 %}active{% endif %} {% if convention_form_step == 12 %}current_step{% endif %} {% if convention_form_step == 11 %}after_step{% endif %}" role="sent">
-                        {% if convention.statut == '5. Transmise' %}
-                            <div>Actions</div>
-                        {% else %}
-                            <div>Téléversement</div>
-                        {% endif %}
-                    </li>
-                {% endif %}
-            </ul>
-
+{% if convention.display_options.display_progress_bar_1 or convention.display_options.display_progress_bar_2 or convention.display_options.display_progress_bar_3 %}
+    <div class="fr-container">
+        <div class="fr-grid-row fr-grid-row--center">
+            <div class="container-progressbar fr-col-12 fr-my-5w">
+                <ul id="step_progressbar" class="progressbar" width="100%">
+                    {% if convention.display_options.display_progress_bar_1 %}
+                        <li class="{% if convention_form_step > 1  %}active{% endif %} {% if convention_form_step == 1  %}current_step{% endif %}" role="bailleur"><div>Bailleur</div></li>
+                        <li class="{% if convention_form_step > 2  %}active{% endif %} {% if convention_form_step == 2  %}current_step{% endif %} {% if convention_form_step == 1 %}after_step{% endif %}" role="programme"><div>Opération</div></li>
+                        <li class="{% if convention_form_step > 3  %}active{% endif %} {% if convention_form_step == 3  %}current_step{% endif %} {% if convention_form_step == 2 %}after_step{% endif %}" role="cadastre"><div>Cadastre</div></li>
+                        <li class="{% if convention_form_step > 4  %}active{% endif %} {% if convention_form_step == 4  %}current_step{% endif %} {% if convention_form_step == 3 %}after_step{% endif %}" role="edd"><div>EDD</div></li>
+                        <li class="{% if convention_form_step > 5  %}active{% endif %} {% if convention_form_step == 5  %}current_step{% endif %} {% if convention_form_step == 4 %}after_step{% endif %}" role="financement"><div>Financement</div></li>
+                        <li class="{% if convention_form_step > 6  %}active{% endif %} {% if convention_form_step == 6  %}current_step{% endif %} {% if convention_form_step == 5 %}after_step{% endif %}" role="logements"><div>Logements</div></li>
+                        <li class="{% if convention_form_step > 7  %}active{% endif %} {% if convention_form_step == 7  %}current_step{% endif %} {% if convention_form_step == 6 %}after_step{% endif %}" role="annexes"><div>Annexes</div></li>
+                        <li class="{% if convention_form_step > 8  %}active{% endif %} {% if convention_form_step == 8  %}current_step{% endif %} {% if convention_form_step == 7 %}after_step{% endif %}" role="stationnements"><div>Stationnements</div></li>
+                        <li class="{% if convention_form_step > 9  %}active{% endif %} {% if convention_form_step == 9  %}current_step{% endif %} {% if convention_form_step == 8 %}after_step{% endif %}" role="comments"><div>Commentaires</div></li>
+                        <li class="{% if convention_form_step > 10 %}active{% endif %} {% if convention_form_step == 10 %}current_step{% endif %} {% if convention_form_step == 9 %}after_step{% endif %}" role="recapitulatif"><div>Récapitulatif</div></li>
+                    {% elif convention.display_options.display_progress_bar_2 %}
+                        <li class="{% if convention_form_step > 10 %}active{% endif %} {% if convention_form_step == 10 %}current_step{% endif %} {% if convention_form_step == 9 %}after_step{% endif %}" role="recapitulatif"><div>Récapitulatif</div></li>
+                        <li class="{% if convention_form_step > 11 %}active{% endif %} {% if convention_form_step == 11 %}current_step{% endif %} {% if convention_form_step == 10 %}after_step{% endif %}" role="preview"><div>Prévisualisation</div></li>
+                        <li class="{% if convention_form_step > 12 %}active{% endif %} {% if convention_form_step == 12 %}current_step{% endif %} {% if convention_form_step == 11 %}after_step{% endif %}" role="sent"><div>Téléversement</div></li>
+                    {% elif convention.display_options.display_progress_bar_3 %}
+                        <li class="{% if convention_form_step > 10 %}active{% endif %} {% if convention_form_step == 10 %}current_step{% endif %} {% if convention_form_step == 9 %}after_step{% endif %}" role="recapitulatif"><div>Récapitulatif</div></li>
+                        <li class="{% if convention_form_step > 11 %}active{% endif %} {% if convention_form_step == 11 %}current_step{% endif %} {% if convention_form_step == 10 %}after_step{% endif %}" role="preview"><div>Prévisualisation</div></li>
+                        <li class="{% if convention_form_step > 12 %}active{% endif %} {% if convention_form_step == 12 %}current_step{% endif %} {% if convention_form_step == 11 %}after_step{% endif %}" role="sent"><div>Actions</div></li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
     </div>
-</div>
-
-{% if convention %}
     <script type="text/javascript" nonce="{{request.csp_nonce}}">
         document.addEventListener('DOMContentLoaded', function () {
             var lis = document.getElementById('step_progressbar').children
