--- a/templates/conventions/actions/bailleur_notification.html
+++ b/templates/conventions/actions/bailleur_notification.html
@@ -1,12 +1,12 @@
 {% load custom_filters %}
-{% if request|is_instructeur and convention.is_instruction_ongoing %}
+{% if request|is_instructeur and convention.display_notification %}
     <div class="fr-col-md-12  fr-py-5w">
         <div role="alert" class="fr-alert fr-alert--info">
             <!-- <p class="fr-alert__title">Convention à valider</p> -->
             {% if convention.get_last_instructeur_notification %}
                 <p>Denière notification du bailleur : {{ convention.get_last_instructeur_notification.cree_le }}</p>
             {% endif %}
-            {% if convention.statut == '2. Instruction requise' %}
+            {% if convention.display_options.display_demande_correction %}
                 <h4>Vous avez ajouté des commentaires à l'attention du bailleur<br>
                     Demandez des corrections ou précisions</h4>
             {% else %}
@@ -31,7 +31,7 @@
                         </label>
                     </div>
                     {% include "common/form/input_textarea.html" with label="Ajouter un commentaire à l'attention du bailleur (optionnel)" form_input=notificationForm.comment %}
-                    {% if convention.statut == '2. Instruction requise' %}
+                    {% if convention.display_options.display_demande_correction %}
                         <button class="fr-btn">
                             Demander des corrections au bailleur
                         </button>
