--- a/templates/conventions/actions/instructeur_notification.html
+++ b/templates/conventions/actions/instructeur_notification.html
@@ -1,13 +1,13 @@
 {% load custom_filters %}
 
-{% if request|is_bailleur and convention.is_instruction_ongoing %}
+{% if request|is_bailleur and convention.display_options.display_notification %}
     <div class="fr-col-md-12  fr-py-5w">
         <div role="alert" class="fr-alert fr-alert--info">
             <!-- <p class="fr-alert__title">Convention à valider</p> -->
             {% if convention.get_last_bailleur_notification %}
                 <p>Denière notification de l'instructeur : {{ convention.get_last_bailleur_notification.cree_le }}</p>
             {% endif %}
-            {% if convention.statut == '3. Corrections requises' %}
+            {% if convention.display_options.display_demande_instruction %}
                 <h4>Vous avez modifié la convention<br>
                     Renvoyez la convention à l'instruction</h4>
             {% else %}
@@ -31,7 +31,7 @@
                         </label>
                     </div>
                     {% include "common/form/input_textarea.html" with form_input=notificationForm.comment label="Ajouter un commentaire à l'attention de l'instructeur (optionnel)" editable=True %}
-                    {% if convention.statut == '3. Corrections requises' %}
+                    {% if convention.display_options.display_demande_instruction %}
                         <button class="fr-btn">
                             Renvoyer la convention à l'instruction
                         </button>
