replace b by strong

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -135,9 +135,9 @@
                                     <td>{{convention.lot.nb_logements}}</td>
                                     <td title="{{convention.statut_for_template.statut_display}}">
                                         <div class="fr-p-1w apilos-colored_status apilos-colored_status--{{convention.statut_for_template.key_statut}}">
-                                            <span><b>
+                                            <span><strong>
                                                 {{convention.statut_for_template.short_statut}}
-                                            </b></span>
+                                            </strong></span>
                                         </div>
                                         <script type="text/javascript" nonce="{{request.csp_nonce}}">
                                             document.addEventListener('DOMContentLoaded', function () {
