--- a/templates/conventions/saved.html
+++ b/templates/conventions/saved.html
@@ -16,7 +16,7 @@
                         <p>le document de convention n'est pas encore soumis à l'instruction</p>
                         <p>La convention est enregistrée mais n'est pas encore soumise au service instructeur,
                             vous pouvez la soumettre à n'importe quel moment en l'éditant de nouveau et en cliquant sur le bouton
-                            <b>"Soumettre au service instructeur"</b> sur l'écran de récapitulatif.
+                            <strong>"Soumettre au service instructeur"</strong> sur l'écran de récapitulatif.
                         </p>
                         <p>Nous restons à votre disposition pour toute information et question.</p>
                         <p>En vous remerciant, nous vous souhaitons une bonne journée</p>
