--- a/templates/emails/alert_create_convention.html
+++ b/templates/emails/alert_create_convention.html
@@ -1,6 +1,6 @@
 <h4>Bonjour L'équipe APiLos !!!</h4>
 
-<p><b>Votre attention s'il vous plait.</b></p>
+<p><strong>Votre attention s'il vous plait.</strong></p>
 
 <p>La convention <a href="{{convention_url}}">{{convention}}</a> vient d'être créé par {{ user }} pour le bailleur {{ convention.bailleur }}.</p>
 
@@ -11,4 +11,4 @@
 </ul>
 
 <p>Cordialement</p>
-<p><b>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a> pour l'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></b></p>
+<p><strong>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a> pour l'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></strong></p>
