--- a/templates/emails/welcome_user.html
+++ b/templates/emails/welcome_user.html
@@ -18,4 +18,4 @@ Pour vous aider à saisir vos conventions sur APiLos, retrouvez les tutoriels su
 <p>Avec l’équipe APiLos, nous restons à votre disposition sur <a href="mailto:contact@apilos.beta.gouv.fr"></a>contact@apilos.beta.gouv.fr></a></p>
 
 <p>Cordialement</p>
-<p><b>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a>, un service du SIAP</b></p>
+<p><strong>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a>, un service du SIAP</strong></p>
