--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -3,12 +3,12 @@
 <header role="banner" class="fr-header">
     {% if ENVIRONMENT == 'staging' %}
         <div role="alert" class="fr-alert fr-alert--info">
-            <p>Attention, vous utilisez actuellement la plateforme <b>ÉCOLE</b></p>
+            <p>Attention, vous utilisez actuellement la plateforme <strong>ÉCOLE</strong></p>
         </div>
     {% endif %}
     {% if ENVIRONMENT == 'development' %}
         <div role="alert" class="fr-alert fr-alert--info">
-            <p>Attention, vous utilisez actuellement la plateforme de <b>DEVELOPPEMENT</b></p>
+            <p>Attention, vous utilisez actuellement la plateforme de <strong>DEVELOPPEMENT</strong></p>
         </div>
     {% endif %}
     <div id="browser_alert" hidden>
