--- a/templates/conventions/actions/generate_convention.html
+++ b/templates/conventions/actions/generate_convention.html
@@ -5,7 +5,7 @@
         </p>
         {% if not convention.type1and2_configuration_not_needed %}
             <p>
-                Avant de pouvoir générer un document de convention, il vous faut préciser le type de convention I ou II et les options associées dans la section <b>Convention de type I & II</b>
+                Avant de pouvoir générer un document de convention, il vous faut préciser le type de convention I ou II et les options associées dans la section <strong>Convention de type I & II</strong>
             </p>
             <button class="fr-btn fr-my-1w" disabled>
                 Générer la convention
