--- a/templates/emails/bailleur_correction_needed.html
+++ b/templates/emails/bailleur_correction_needed.html
@@ -9,4 +9,4 @@
 {% endif %}
 
 <p>Cordialement</p>
-<p><b>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></b></p>
+<p><strong>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></strong></p>
