--- a/templates/emails/bailleur_instruction.html
+++ b/templates/emails/bailleur_instruction.html
@@ -4,4 +4,4 @@
     Ce dernier reviendra vers vous pour l’instruction de cette convention.</p>
 
 <p>Cordialement</p>
-<p><b>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></b></p>
+<p><strong>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></strong></p>
