--- a/templates/emails/bailleur_valide.html
+++ b/templates/emails/bailleur_valide.html
@@ -27,4 +27,4 @@
 <p>Dans l‘attente de vous retrouver sur APiLos pour une nouvelle convention, nous restons à votre disposition.</p>
 
 <p>Cordialement</p>
-<p><b>L‘équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></b></p>
+<p><strong>L‘équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></strong></p>
