--- a/templates/emails/instructeur_instruction.html
+++ b/templates/emails/instructeur_instruction.html
@@ -3,4 +3,4 @@
 <p>La convention <a href="{{convention_url}}">{{convention}}</a> est à instruire.</p>
 
 <p>Cordialement</p>
-<p><b>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></b></p>
+<p><strong>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></strong></p>
