--- a/templates/layout/siap/habilitations.html
+++ b/templates/layout/siap/habilitations.html
@@ -16,7 +16,7 @@
         {% for habilitation in request.session.habilitations %}
             {% if habilitation.id != request.session.habilitation_id %}
                 <li>
-                    <a class="fr-nav__link fr-p-1w" href="{{ request|get_change_habilitation_url:habilitation.id }}"><b>{{ habilitation.groupe.libelleRole }}</b><br>
+                    <a class="fr-nav__link fr-p-1w" href="{{ request|get_change_habilitation_url:habilitation.id }}"><strong>{{ habilitation.groupe.libelleRole }}</strong><br>
                         {% if habilitation.sousTitre1 %}
                             {{ habilitation.sousTitre1 }}<br>
                         {% endif %}
