--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -1,40 +1,38 @@
 {% load custom_filters %}
-{% if request|is_instructeur and convention.statut != '1. Projet' %}
+{% if request|is_instructeur and convention.display_options.display_validation %}
     <div class="fr-col-md-12  fr-py-5w">
-        {% if convention.is_instruction_ongoing %}
-            <div role="alert" class="fr-alert fr-alert--warning">
-                {% with editable_validation=convention.type1and2_configuration_not_needed %}
-                    {% if editable_validation %}
-                        <p class="fr-mb-3w">Une fois la convention générée, si celle-ci correspond aux attendus, vous pouvez l'envoyer au bailleur par email et cliquer sur la bouton ci-dessous.
-                            Cela nous permet de suivre le statut de la convention en temps réel.</p>
-                    {% else %}
-                        <p class="fr-mb-3w">Avant de pouvoir valider la convention, il vous faut préciser le type de convention I ou II et les options associées dans la section
-                            <b>Convention de type I & II</b></p>
-                    {% endif %}
-                    <div>
-                        <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" id="validation_form" data-turbo="false">
-                            {% csrf_token %}
-                            <p class="fr-h4">Associer un numéro de convention</p>
+        <div role="alert" class="fr-alert fr-alert--warning">
+            {% with editable_validation=convention.type1and2_configuration_not_needed %}
+                {% if editable_validation %}
+                    <p class="fr-mb-3w">Une fois la convention générée, si celle-ci correspond aux attendus, vous pouvez l'envoyer au bailleur par email et cliquer sur la bouton ci-dessous.
+                        Cela nous permet de suivre le statut de la convention en temps réel.</p>
+                {% else %}
+                    <p class="fr-mb-3w">Avant de pouvoir valider la convention, il vous faut préciser le type de convention I ou II et les options associées dans la section
+                        <strong>Convention de type I & II</strong></p>
+                {% endif %}
+                <div>
+                    <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" id="validation_form" data-turbo="false">
+                        {% csrf_token %}
+                        <p class="fr-h4">Associer un numéro de convention</p>
 
-                            <!--                             <div class="fr-grid-row fr-grid-row--gutters">
-                                <div class="fr-col-12 fr-col-md-6 fr-col-lg-4">
-                                    <div class="block--row-strech">
-                                        <div class="block--row-strech-1">
-                                            {% include "common/form/input_text.html" with form_input=conventionNumberForm.prefixe_numero editable=editable_validation %}
-                                        </div>
-                                        <p class="fr-mt-4w fr-ml-2w fr-h4">/</p>
+                        <!--                             <div class="fr-grid-row fr-grid-row--gutters">
+                            <div class="fr-col-12 fr-col-md-6 fr-col-lg-4">
+                                <div class="block--row-strech">
+                                    <div class="block--row-strech-1">
+                                        {% include "common/form/input_text.html" with form_input=conventionNumberForm.prefixe_numero editable=editable_validation %}
                                     </div>
+                                    <p class="fr-mt-4w fr-ml-2w fr-h4">/</p>
                                 </div>
-                                <div class="fr-col-12 fr-col-md-3 fr-col-lg-2 fr-pl-md-1w">
-                                    {% include "common/form/input_number.html" with form_input=conventionNumberForm.suffixe_numero editable=editable_validation %}
-                                </div>
-                            </div> -->
-                            <div class="fr-grid-row fr-grid-row--gutters">
-                                <div class="fr-col-12 fr-col-md-6">
-                                    <div class="block--row-strech">
-                                        <div class="block--row-strech-1">
-                                            {% include "common/form/input_text.html" with form_input=conventionNumberForm.convention_numero editable=editable_validation %}
-                                        </div>
+                            </div>
+                            <div class="fr-col-12 fr-col-md-3 fr-col-lg-2 fr-pl-md-1w">
+                                {% include "common/form/input_number.html" with form_input=conventionNumberForm.suffixe_numero editable=editable_validation %}
+                            </div>
+                        </div> -->
+                        <div class="fr-grid-row fr-grid-row--gutters">
+                            <div class="fr-col-12 fr-col-md-6">
+                                <div class="block--row-strech">
+                                    <div class="block--row-strech-1">
+                                        {% include "common/form/input_text.html" with form_input=conventionNumberForm.convention_numero editable=editable_validation %}
                                     </div>
                                 </div>
                             </div>
@@ -55,40 +53,58 @@
                         <div class="fr-col-md-12 fr-mt-4w">
                             <p><em>Le préfixe du numéro de convention est modifiable dans <a class="fr-link fr-mb-1w" href="{% url 'settings:administrations' %}" data-turbo="false">les paramètres de votre administration</a>
                             </em></p>
-
-
-
-
-
                         </div>
-                    </div>
-                {% endwith %}
-            </div>
-        {% elif not convention.isnt_validated %}
-            <div role="alert" class="fr-alert fr-alert--success">
 
-                <p class="fr-alert__title">La convention a été validée le {{ convention.valide_le|date:"j F Y" }}</p>
-                <p class="fr-alert__title">avec le numéro {{convention.numero}}</p>
-
-                <div hidden>
-                    <form method="post" id="force_validation" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}">
-                        {% csrf_token %}
-                        <input type="hidden" name="Force" value="True"/>
-                        <button class="fr-btn fr-mt-3w" id="force_validation_button">
-                            Forcer la RE-validation de la convention
+                        <button class="fr-btn fr-mt-3w" id="validation_button" {% if not editable_validation %}disabled{% endif %}>
+                            Valider la convention
                         </button>
                         <script type="text/javascript" nonce="{{request.csp_nonce}}">
                             document.addEventListener('DOMContentLoaded', function () {
-                                document.getElementById("force_validation")
+                                document.getElementById("validation_form")
                                     .addEventListener('submit', function(){
-                                    document.getElementById("force_validation_button").disabled = true
+                                    document.getElementById("validation_button").disabled = true
                                     return true
                                 });
                             });
                         </script>
                     </form>
+                    <div class="fr-col-md-12 fr-mt-4w">
+                        <p><em>Le préfixe du numéro de convention est modifiable dans <a class="fr-link fr-mb-1w" href="{% url 'settings:administrations' %}" data-turbo="false">les paramètres de votre administration</a>
+                        </em></p>
+                    </div>
                 </div>
-        {% endif %}
+            {% endwith %}
+        </div>
+    </div>
+{% endif %}
+
+{% if request|is_instructeur and convention.display_options.display_is_validated %}
+
+    <div class="fr-col-md-12  fr-py-5w">
+        <div role="alert" class="fr-alert fr-alert--success">
+
+            <p class="fr-alert__title">La convention a été validée le {{ convention.valide_le|date:"j F Y" }}</p>
+            <p class="fr-alert__title">avec le numéro {{convention.numero}}</p>
+
+            <div hidden>
+                <form method="post" id="force_validation" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="Force" value="True"/>
+                    <button class="fr-btn fr-mt-3w" id="force_validation_button">
+                        Forcer la RE-validation de la convention
+                    </button>
+                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                        document.addEventListener('DOMContentLoaded', function () {
+                            document.getElementById("force_validation")
+                                .addEventListener('submit', function(){
+                                document.getElementById("force_validation_button").disabled = true
+                                return true
+                            });
+                        });
+                    </script>
+                </form>
+            </div>
+        </div>
     </div>
 {% endif %}
 
