--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -88,7 +88,7 @@
                             <table>
                                 <thead>
                                     <tr>
-                                        {% if convention.statut != '1. Projet' %}
+                                        {% if convention.display_options.display_comments %}
                                             {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' label='Références cadastrales' %}
                                         {% endif %}
                                         <th scope="col">Section {% if formset.total_form_count %}{% include "common/form/required_field_star.html" %}{% endif %}</th>
@@ -101,7 +101,7 @@
                                     {% for form_cadastre in formset %}
                                         {% with main_object_field="reference_cadastrale__uuid__"|add:form_cadastre.uuid.value %}
                                             <tr id="{{form_cadastre.uuid.id_for_label}}_group">
-                                                {% if convention.statut != '1. Projet' %}
+                                                {% if convention.display_options.display_comments %}
                                                     <td id="{{form_cadastre.uuid.id_for_label}}_div">
                                                         {% include 'common/utils/comments_field.html' with object_field=main_object_field form_input=form_cadastre.uuid %}
                                                     </td>
