--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -21,6 +21,22 @@
                         <li>résilier la convention</li>s
                     </ul>
                 </div>
+                <div class="fr-col-12 fr-col-lg-6 fr-mb-2w">
+                    <div role="alert" class="fr-alert fr-alert--info">
+                        <p class="fr-alert__title">
+                            Générer la fiche CAF
+                        </p>
+                        <p>
+                            Ici, vous pouvez télécharger une fiche CAF.
+                        </p>
+                        <form method="post" action="{% url 'conventions:fiche_caf' convention_uuid=convention.uuid %}" data-turbo="false">
+                            {% csrf_token %}
+                            <button class="fr-btn fr-my-1w">
+                                Générer la fiche CAF
+                            </button>
+                        </form>
+                    </div>
+                </div>
                 <div class="fr-col-12 fr-col-lg-6">
                     <div role="alert" class="fr-alert fr-alert--warning">
                         <p class="fr-alert__title">
