--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -45,7 +45,7 @@
                     {% if False %}
                         <div class="fr-col-12 fr-col-lg-6">
                             <div class="fr-card fr-card--no-arrow">
-                                <div class="fr-card__body">
+                                <div class="fr-card__body fr-my-2w">
                                     <h4 class="fr-card__title">
                                         Convention
                                     </h4>
@@ -60,7 +60,7 @@
                         </div>
                         <div class="fr-col-12 fr-col-lg-6">
                             <div class="fr-card fr-card--no-arrow">
-                                <div class="fr-card__body">
+                                <div class="fr-card__body fr-my-2w">
                                     <div class="block--row-strech" id="{{object_field}}_div">
                                         <div class="block--row-strech-1">
                                             <h4 class="fr-card__title">
@@ -92,7 +92,7 @@
                     {% else %}
                         <div class="fr-col-12">
                             <div class="fr-card fr-card--no-arrow">
-                                <div class="fr-card__body">
+                                <div class="fr-card__body fr-my-2w">
                                     <div class="block--row-strech" id="{{object_field}}_div">
                                         <div class="block--row-strech-1">
                                             <h4 class="fr-card__title">
@@ -143,7 +143,7 @@
                     {% endif %}
                     <div class="fr-col-12 fr-col-lg-6">
                         <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
+                            <div class="fr-card__body fr-my-2w">
                                 <div class="block--row-strech" id="{{object_field}}_div">
                                     <div class="block--row-strech-1">
                                         <h4 class="fr-card__title">
@@ -175,7 +175,7 @@
                     </div>
                     <div class="fr-col-12 fr-col-lg-6">
                         <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
+                            <div class="fr-card__body fr-my-2w">
                                 <div class="block--row-strech" id="{{object_field}}_div">
                                     <div class="block--row-strech-1">
                                         <h4 class="fr-card__title">
@@ -210,7 +210,7 @@
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12 fr-col-lg-12">
                         <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
+                            <div class="fr-card__body fr-my-2w">
                                 <div class="block--row-strech" id="{{object_field}}_div">
                                     <div class="block--row-strech-1">
                                         <h4 class="fr-card__title">
@@ -275,7 +275,7 @@
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12 fr-col-lg-12">
                         <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
+                            <div class="fr-card__body fr-my-2w">
                                 <div class="block--row-strech" id="{{object_field}}_div">
                                     <div class="block--row-strech-1">
                                         <h4 class="fr-card__title">
@@ -341,7 +341,7 @@
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12 fr-col-lg-12">
                         <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
+                            <div class="fr-card__body fr-my-2w">
                                 <div class="block--row-strech" id="{{object_field}}_div">
                                     <div class="block--row-strech-1">
                                         <h4 class="fr-card__title">
@@ -415,7 +415,7 @@
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12 fr-col-lg-12">
                         <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
+                            <div class="fr-card__body fr-my-2w">
                                 <div class="block--row-strech" id="{{object_field}}_div">
                                     <div class="block--row-strech-1">
                                         <h4 class="fr-card__title">
@@ -521,7 +521,7 @@
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12 fr-col-lg-12">
                         <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
+                            <div class="fr-card__body fr-my-2w">
                                 <div class="block--row-strech" id="{{object_field}}_div">
                                     <div class="block--row-strech-1">
                                         <h4 class="fr-card__title">
@@ -614,7 +614,7 @@
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12 fr-col-lg-12">
                         <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
+                            <div class="fr-card__body fr-my-2w">
                                 <div class="block--row-strech" id="{{object_field}}_div">
                                     <div class="block--row-strech-1">
                                         <h4 class="fr-card__title">
@@ -673,7 +673,7 @@
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12 fr-col-lg-12">
                         <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body">
+                            <div class="fr-card__body fr-my-2w">
                                 <div class="block--row-strech" id="{{object_field}}_div">
                                     <div class="block--row-strech-1">
                                         <h4 class="fr-card__title">
