--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -11,116 +11,8 @@
         {% include "conventions/common/form_header.html" with convention=convention %}
         {% include "common/step_progressbar.html" with convention=convention %}
         <div class="fr-container fr-pb-5w">
-            {% if convention.display_options.display_progress_bar_3 %}
-                {% if convention.televersement_convention_signee_le %}
-                    <p class="fr-h3">Votre convention signée a été téléversée le {{convention.televersement_convention_signee_le}}
-                    </p>
-                {% else %}
-                    <p class="fr-h3">Votre convention signée a déjà été téléversée</p>
-                {% endif %}
-                <p>Vous pouvez la prévisualiser et la télécharger à l'étape <a href="{% url 'conventions:preview' convention_uuid=convention.uuid %}">Prévisualisation</a></p>
-                <div class="fr-grid-row fr-grid-row--gutters">
 
-                    <div class="fr-col-12 fr-col-lg-6 fr-mb-2w">
-                        <div role="alert" class="fr-alert fr-alert--info">
-                            <p class="fr-alert__title">
-                                Générer la fiche CAF
-                            </p>
-                            <p>
-                                Ici, vous pouvez télécharger une fiche CAF.
-                            </p>
-                            <form action="{% url 'conventions:fiche_caf' convention_uuid=convention.uuid %}">
-                                {% csrf_token %}
-                                <button class="fr-btn fr-my-1w">
-                                    Générer la fiche CAF
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="fr-col-12 fr-col-lg-6">
-                        <div role="alert" class="fr-alert fr-alert--warning">
-                            <p class="fr-alert__title">
-                                Résiliation/dénonciation de la convention
-                            </p>
-                            <p>Vous pouvez ici procéder à la résiliation/dénonciation de la convention dans APiLos.</p>
-                            <form method="post" action="" id="{{resiliation_form.date_resiliation.id_for_label}}_validation_form">
-                                {% csrf_token %}
-                                <p class="fr-mt-2w"><strong>Spécifier la date de résiliation/dénonciation</strong></p>
-                                <div class="fr-grid-row fr-grid-row--gutters">
-                                    <div class="fr-col-12">
-                                        <div class="fr-mt-1w block--row-strech" id="{{resiliation_form.date_resiliation.id_for_label}}_div">
-                                            <div class="fr-input fr-input-wrap fr-fi-calendar-line block--row-strech-1">
-                                                <input
-                                                    type="date"
-                                                    class="dateinput"
-                                                    id="{{resiliation_form.date_resiliation.id_for_label}}"
-                                                    name="{{resiliation_form.date_resiliation.html_name}}">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <button class="fr-btn apilos-btn--red fr-btn--icon-left fr-fi-delete-line fr-my-2w" data-fr-opened="false" type="button" aria-controls="fr-modal-resiliate-{{convention.uuid}}">
-                                    Résilier/Dénoncer la convention
-                                </button>
-                                {% for error in resiliation_form.date_resiliation.errors %}
-                                    <p id="text-input-error-desc-error" class="fr-error-text">
-                                        {{ error }}
-                                    </p>
-                                {% endfor %}
-                            </form>
-                        </div>
-                        <dialog aria-labelledby="fr-modal-resiliate-{{convention.uuid}}-title" id="fr-modal-resiliate-{{convention.uuid}}" class="fr-modal" role="dialog">
-                            <div class="fr-container fr-container--fluid fr-container-md">
-                                <div class="fr-grid-row fr-grid-row--center">
-                                    <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
-                                        <div class="fr-modal__body">
-                                            <div class="fr-modal__header">
-                                                <button class="fr-link--close fr-link" aria-controls="fr-modal-resiliate-{{convention.uuid}}">Fermer</button>
-                                            </div>
-                                            <div class="fr-modal__content">
-                                                <h1 id="fr-modal-resiliate-{{convention.uuid}}-title" class="fr-modal__title">
-                                                    <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                                                    {{ convention }}
-                                                </h1>
-                                                <p>Vous vous apprétez à résilier/dénoncer la convention "{{convention}}", êtes-vous sûr ?</p>
-                                            </div>
-                                            <div class="fr-modal__footer">
-                                                <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
-                                                    <li>
-                                                        <button type="button" class="fr-btn fr-btn--icon-left fr-fi-delete-line" id='resiliate_{{convention.uuid}}'>
-                                                            Résilier/dénoncer la convention
-                                                        </button>
-                                                        <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                                            document.getElementById('resiliate_{{convention.uuid}}').addEventListener('click', function(){
-                                                                document.getElementById('{{resiliation_form.date_resiliation.id_for_label}}_validation_form').submit();
-                                                            });
-                                                        </script>
-                                                    </li>
-                                                    <li>
-                                                        <button type="button" class="fr-btn fr-btn--secondary" aria-controls="fr-modal-resiliate-{{convention.uuid}}">Annuler</button>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </dialog>
-                    </div>
-                </div>
-                <p>Prochainement, vous pourrez créer des avenants</p>
-
-
-                <div class="fr-accordion fr-mt-5w">
-                    <div class="fr-accordion__title">
-                        <div class="fr-accordion__btn clickable " aria-expanded="false" aria-controls="accordion-106"><em>Si nécessaire, vous pouvez téléverser une nouvelle version de la convention signée ici.</em></div>
-                    </div>
-                    <div class="fr-collapse" id="accordion-106">
-            {% else %}
-                <div class="fr-col-md-12">Ici, vous pouvez téléverser votre convention signée afin  qu'elle puisse être transmise. </div>
-                <div class="fr-py-3w">
-            {% endif %}
+            <p class="fr-h2">Ici, vous pouvez téléverser votre convention signée afin  qu'elle puisse être transmise. </p>
 
             <form method="post" action="" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
                 {% csrf_token %}
@@ -157,8 +49,5 @@
                 </script>
             </form>
         </div>
-        {% if convention.display_options.display_progress_bar_3 %}
-            </div>
-        {% endif %}
     </div>
 {% endblock %}
