update: migrate status "transmise" to "signée" + Fiche CAF

--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -119,8 +119,8 @@
                                 }
                             },
                             series: [{
-                                name: "Transmise",
-                                data: {{ conv_bydept.Transmise }}
+                                name: "Signée",
+                                data: {{ conv_bydept.Signée }}
                             }, {
                                 name: "A signer",
                                 data: {{ conv_bydept.A_signer }}
