--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -20,7 +20,7 @@
             <p>Vous pouvez la prévisualiser et la télécharger à l'étape <a href="{% url 'conventions:preview' convention_uuid=convention.uuid %}">Prévisualisation</a></p>
             <div class="fr-grid-row fr-grid-row--gutters">
 
-                <div class="fr-col-12 fr-col-lg-6 fr-mb-2w">
+                <div class="fr-col-12 fr-mb-2w">
                     <div role="alert" class="fr-alert fr-alert--info">
                         <p class="fr-alert__title">
                             Générer la fiche CAF
@@ -36,7 +36,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="fr-col-12 fr-col-lg-6">
+                <div class="fr-col-12  fr-mb-3w">
                     <div role="alert" class="fr-alert fr-alert--warning">
                         <p class="fr-alert__title">
                             Résiliation/dénonciation de la convention
