--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -10,44 +10,50 @@
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html" with convention=convention %}
         {% include "common/step_progressbar.html" with convention=convention %}
-        <div class="fr-container fr-pb-5w">
+        {% if request|is_instructeur %}
+            <div class="fr-container fr-pb-5w">
 
-            <p class="fr-h2">Ici, vous pouvez téléverser votre convention signée afin qu'elle puisse être transmise. </p>
+                <p class="fr-h2">Ici, vous pouvez téléverser votre convention signée afin qu'elle puisse être transmise. </p>
 
-            <form method="post" action="" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
-                {% csrf_token %}
-                <input
-                    class="fileinput--hidden"
-                    type="file"
-                    id="{{upform.file.id_for_label}}"
-                    name="{{upform.file.html_name}}"
-                    accept="application/pdf">
-                <div class="block--row-strech">
-                    <div>
-                        <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
-                            Téléverser la convention signée
-                        </button>
-                        {% for error in upform.file.errors %}
-                            <p id="text-input-error-desc-error" class="fr-error-text">
-                                {{ error }}
-                            </p>
-                        {% endfor %}
+                <form method="post" action="" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
+                    {% csrf_token %}
+                    <input
+                        class="fileinput--hidden"
+                        type="file"
+                        id="{{upform.file.id_for_label}}"
+                        name="{{upform.file.html_name}}"
+                        accept="application/pdf">
+                    <div class="block--row-strech">
+                        <div>
+                            <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
+                                Téléverser la convention signée
+                            </button>
+                            {% for error in upform.file.errors %}
+                                <p id="text-input-error-desc-error" class="fr-error-text">
+                                    {{ error }}
+                                </p>
+                            {% endfor %}
+                        </div>
                     </div>
-                </div>
 
-                <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                    document.getElementById('{{upform.file.id_for_label}}_upload_button').onclick = function() {
-                        document.getElementById('{{upform.file.id_for_label}}').click();
-                    };
-                    document.getElementById('{{upform.file.id_for_label}}').onchange = function() {
-                        var input = document.createElement('input');
-                        input.setAttribute('name', 'Upload');//set the param name
-                        input.setAttribute('value', 'True');//set the value
-                        this.form.appendChild(input)
-                        document.getElementById("{{upform.file.id_for_label}}_form").submit();
-                    }
-                </script>
-            </form>
-        </div>
+                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                        document.getElementById('{{upform.file.id_for_label}}_upload_button').onclick = function() {
+                            document.getElementById('{{upform.file.id_for_label}}').click();
+                        };
+                        document.getElementById('{{upform.file.id_for_label}}').onchange = function() {
+                            var input = document.createElement('input');
+                            input.setAttribute('name', 'Upload');//set the param name
+                            input.setAttribute('value', 'True');//set the value
+                            this.form.appendChild(input)
+                            document.getElementById("{{upform.file.id_for_label}}_form").submit();
+                        }
+                    </script>
+                </form>
+            </div>
+        {% else %}
+            <div class="fr-container fr-pb-5w">
+                <p class="fr-h2">Ici, la convention pourra être téléversée par l'administration en charge dès qu'elle sera signée. </p>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
