update: form new avenant with type

--- a/templates/conventions/new_avenant.html
+++ b/templates/conventions/new_avenant.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block page_title %}Selection - APiLos{% endblock%}
+{% block page_title %}Nouvel avenant - APiLos{% endblock%}
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
@@ -10,28 +10,27 @@
         <div class="fr-container">
             <form method="post" action="{% if redirect_action %}{{ redirect_action }}{% endif %}">
                 {% csrf_token %}
-
+                <div class="fr-mt-1w block--row-strech" >
+                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
+                        {% include "common/form/input_select.html" with form_input=form.avenant_type mandatory_input=True %}
+                    </div>
+                </div>
                 {% for error in form.lot_uuid.errors %}
                     <p id="select-error-desc-error" class="fr-error-text">
                         {{ error }}
                     </p>
                 {% endfor %}
-            </div>
 
 
+
+
+                <div class="form-button-footer fr-col-md-12 fr-py-5w">
+                    {% include "common/button/next_and_save.html" with suivant='conventions:selection' %}
+                    <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
+                        Revenir à la liste des conventions
+                    </a>
+                </div>
+            </form>
         </div>
-    </fieldset>
-    </div>
-    </div>
-    </div>
-
-    <div class="form-button-footer fr-col-md-12 fr-py-5w">
-        {% include "common/button/next_and_save.html" with suivant='conventions:selection' %}
-        <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
-            Revenir à la liste des conventions
-        </a>
-    </div>
-    </form>
-    </div>
     </div>
 {% endblock %}
