--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -26,7 +26,7 @@
                             Générer la fiche CAF
                         </p>
                         <p>
-                            Ici, vous pouvez télécharger une fiche CAF.
+                            La fiche CAF sera générée en format docx et téléchargée automatiquement.
                         </p>
                         <form action="{% url 'conventions:fiche_caf' convention_uuid=convention.uuid %}">
                             {% csrf_token %}
@@ -92,8 +92,23 @@
                     </div>
                 {% endif %}
             </div>
-            <p>Prochainement, vous pourrez créer des avenants</p>
-
+            {% if request|is_bailleur %}
+                <div class="fr-col-md-12">
+                    <div role="alert" class="fr-alert fr-alert--info">
+                        <p class="fr-alert__title">
+                            Avenants
+                        </p>
+                        <p>
+                            L'avenant créé sera automatiquement rattaché à la convention actuelle.
+                        </p>
+                        <div>
+                            <a class="fr-btn fr-my-1w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
+                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
             {% if request|is_instructeur %}
                 <div class="fr-accordion fr-mt-5w">
                     <div class="fr-accordion__title">
